[package]
name = "vadersay"
version = "0.6.1"
authors = ["prof79 <markus@markusegger.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.17"
owo-colors = "1.1.3"
failure = "0.1.8"
exitfailure = "0.5.1"
