[package]
name = "vadersay"
version = "0.6.3"
authors = ["prof79 <markus@markusegger.at>"]
edition = "2018"
description = "Say it like Vader! CLI tool"
repository = "https://github.com/prof79/vadersay"
license = "MIT"
license-file = "LICENSE.txt"
readme = "ReadMe.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.17"
owo-colors = "1.1.3"
failure = "0.1.8"
exitfailure = "0.5.1"
assert_cmd = "1.0.1"
predicates = "1.0.5"
